--- a/templates/contents/list_software.html
+++ b/templates/contents/list_software.html
@@ -43,21 +43,22 @@
             {% for subject in query %}
             <div class="row">
                 <div class="col">
-                    <div class="card mb-3" style="height:11rem;">
+                    <div class="card mb-3 img_scale" >
                         <div class="row">
                             <div class="col-md-4">
+
                                 <a href="{% url 'subject' subject.id %}">
                                     <!-- <figure style='width: 18rem; height:10rem;'> -->
-                                    <!-- <figure class="image is-16by9"> -->
-                                    <figure class="image is-16by9">
+                                    <figure class="image is-16by9 mb-0" >
                                         <img src="{{subject.thumbnail_file.url}}" alt="Placeholder image"
                                             class='rounded-2 img-fluid'>
                                         <!-- <img src="{{subject.thumbnail_file.url}}" alt="Placeholder image" class='rounded-2 img-fluid' style='width: 18rem; height:11rem;' > -->
                                     </figure>
                                 </a>
+
                             </div>
                             <div class="col-md-8">
-                                <div class="row mt-3">
+                                <div class="row">
                                     <div class="col">
                                         <h5 class="card-title">{{subject.title}}</h5>
                                     </div>
@@ -89,6 +90,7 @@
                                 </div>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
