--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -2,29 +2,36 @@
 {% block content %}
 
 <div class="container">
-    <div class="row p-3">
+<div class="row p-2">
 
-        <div class="col-2 border rounded-pill text-center bg-light"><a class='nav-link' href="{% url 'list_software' %}">Software & IT</a></div>
-        <div class="col-1 border rounded-pill text-center bg-light "><a class='nav-link' href="{% url 'list_arts' %}">Arts</a></div>
-        <div class="col-2 border rounded-pill text-center bg-light "><a class='nav-link' href="{% url 'list_fitness' %}">Sports & Fitness</a></div>
-        <div class="col-2 border rounded-pill text-center bg-light "><a class='nav-link' href="{% url 'list_personal' %}">Personal Development</a></div>
-        <div class="col-2 border rounded-pill text-center bg-light"><a class='nav-link' href="{% url 'list_skills' %}">Everyday Skills</a></div>
-        <div class="col-1 border rounded-pill text-center bg-light"><a class='nav-link' href="{% url 'list_buisness' %}">Buisness</a></div>
-        <div class="col-2 border rounded-pill text-center bg-light"><a class='nav-link' href="{% url 'list_fundamental' %}">Fundamental Science</a></div>
-    </div>
+    <div class="col-2 border rounded-pill text-center bg-light p-2 ">
+        <a class='nav-link'
+            href="{% url 'list_software' %}">Software & IT</a></div>
+    <div class="col-1 border rounded-pill text-center bg-light p-2 "><a class='nav-link'
+            href="{% url 'list_arts' %}">Arts</a></div>
+    <div class="col-2 border rounded-pill text-center bg-light p-2  "><a class='nav-link'
+            href="{% url 'list_fitness' %}">Sports & Fitness</a></div>
+    <div class="col-2 border rounded-pill text-center bg-light p-2"><a class='nav-link'
+            href="{% url 'list_personal' %}">Personal Development</a></div>
+    <div class="col-2 border rounded-pill text-center bg-light p-2"><a class='nav-link'
+            href="{% url 'list_skills' %}">Domestic Skills</a></div>
+    <div class="col-1 border rounded-pill text-center bg-light p-2 "><a class='nav-link'
+            href="{% url 'list_buisness' %}" >Business</a></div>
+    <div class="col-2 border rounded-pill text-center bg-light p-2 "><a class='nav-link' href="{% url 'list_fundamental' %}">Fundamental Science</a></div>
+</div>
     
     <div class="row">
 
 {% for subject in subjects %}
 
         <div class="col-sm-3">
-            <div class="card mb-3" style="border-color: transparent;">
+            <div class="card mb-3 img_scale" style="border-color: transparent;">
                 <!-- <div class="p-2"> -->
                     <div class="card-header" style='height:4rem' ><h5>{{subject.title}}</h5></div>
 
                     <a href="{% url 'subject' subject.id %}">
                         <!-- <figure class="image is-4by3"> -->
-                            <figure class="image is-16by9">
+                        <figure class="image is-16by9">
                             <img src="{{subject.thumbnail_file.url}}" alt="Placeholder image" class='rounded-2 img-fluid'>
                             <!-- <img src="{{subject.thumbnail_file.url}}" alt="Placeholder image"  class='card-image-top' style='width:18rem; height: 10rem;'> -->
                         </figure>
