--- a/templates/subject_page.html
+++ b/templates/subject_page.html
@@ -4,12 +4,12 @@
 
 <div class="container">
   
-<div class="row mt-1" >
+<div class="row mt-1">
     <div class="col-4 m-1">
         <div class="card">
 
                 <div class="card-header" style='min-height:5rem' >
-                 <h4>{{subject.title}}</h4>
+                <h4>{{subject.title}}</h4>
                 </div>
 
                 <figure>
@@ -39,39 +39,39 @@
         <div class="row">
             <div class="col">
                 <strong>Description: </strong>
-                <!-- <a ref='#collapse-p' data-toggle="collapse" data-target="#collapse-p">
+                <a href='#collapse-p' data-bs-toggle="collapse" data-target="#collapse-p">
                 Read More
-                </a> -->
+                </a>
                 </div>
-            </div>
+        </div>
 
             <!-- <div class="collapse show" id='collapse-p'> -->
-            <!-- <div class="collapse" id='collapse-p'> -->
-            <div class="row" style='height:6rem'>
+            <div class="collapse" id='collapse-p'>
+            <div class="row" style='height:7rem'>
                 <div class="col">
                 {{subject.description}}
+            </div>
             </div>
             </div>
 
             <div class="row">
             <div class="col">
                 <strong>Prerequisites: </strong>
-            </div>
-            </div>
-            <div class="row" style='height:6rem'>
-                <div class="col">
-                    {{subject.prerequisite}}
+                <a href='#collapse-pr' data-bs-toggle="collapse" data-target="#collapse-pr">
+                    Read More
+                </a>
                 </div>
+                </div>
+            
+
+            <div class="collapse" id='collapse-pr'>
+                <div class="row" style='height:7rem'>
+                    <div class="col">
+                    {{subject.prerequisite}}
+                    </div>
             </div>
-           <!-- <div class="row" style='height: 4rem; overflow: hidden'> -->
-           <!-- <div class="row" style='height: 4rem; overflow: scroll'> -->
-           <!-- <div class="row" style='height:6rem'>
-               <div class="col" data-toggle="collapse" data-target='#collapse-p1'><strong>Prerequisites:</strong> </div>
-                <div class="collapse show" id='collapse-p1'>{{subject.prerequisite}}</div> -->
-
-
-        
-        <div class="row"><div class="col"><strong>Timing: </strong>Count</div></div>
+            </div>
+        <div class="row"><div class="col"><strong>Timing: </strong>{{subject.length}} min</div></div>
         <div class="row">
             <div class="col"><strong>Price: </strong> {{subject.price.discount}} USD</div>
         </div>
@@ -133,39 +133,35 @@
 <div class="col-7 m-1">
     <div class="card">
         <div class="card-header"><h4>Content</h4></div>
-        <div class="card-body">
-            <ul class="list-group list-group-flush">
+        <!-- <div class="card-body"> -->
+            <!-- <ul class="list-group list-group-flush"> -->
                 
 
 {% for section in sections %}
-        <h5 data-toggle="collapse" data-target='#section{{section.id}}'>{{section.title}}</h5>
-
+        <div class="section_1">
+        <h5 data-bs-toggle="collapse" data-bs-target='#section{{section.id}}'>{{section.title}} {{section.length}} min</h5>
+        </div>
                 {% for lecture in lectures %}
                     {% if lecture.section == section %}
                     <div id="section{{section.id}}" class='collapse'>
                     {% if lecture.free == False %}
-                    <li class="list-group-item">{{lecture.title}}</li>
+                    <li class="list-group-item">{{lecture.title}} {{lecture.length}} min</li>
                     {% else %}
                     <li class="list-group-item">
-                        <a href="{% url 'video' lecture.id %}" target="_blank">{{lecture.title}}</a>
+                        <a href="{% url 'video' lecture.id %}" target="_blank">{{lecture.title}} {{lecture.length}} min</a>
                     </li>
                     {% endif %}
                     </div>
                     {% endif %}
-                {% endfor%}
-               
+                {% endfor%}               
 {% endfor %}
-         
-            </ul>
-        </div>
-   
-
+           
 </div>
 </div>
 </div>
 
 <div class="row mt-2 pl-2"> .
-    <h3>Feedback</h3>
+    <h3>Reivews</h3>
 </div>
 
     <div class="row mt-1">
@@ -184,6 +180,7 @@
                 </div>
             </div>
         {% endfor %}
+        
     </div>
     </div>
 
