Added sort by criteria

--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -17,15 +17,14 @@
                 <div class="col">{{request.user.first_name}} {{request.user.last_name}}</div>
                 <div class="col-3">
                     <!-- ===========================Modal======================= -->
-                    <button type="button" class="btn btn-outline-dark btn-block" data-toggle='modal'
-                        data-target='#nameModal'>Change</button>
+                    <button type="button" class="btn btn-outline-dark btn-block" data-bs-toggle='modal' data-bs-target='#nameModal'>Change</button>
             
                     <div class="modal" id='nameModal'>
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <h5 class='modal-title'>Change your name:</h5>
-                                    <button class='close' data-dismiss='modal'>&times;</button>
+                                    <button class='close' data-bs-dismiss='modal'>&times;</button>
                                 </div>
                                 <div class="modal-body">
             
