--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -45,8 +45,9 @@
     <div class="container">
       <div class="row m-auto">
 
-      <!-- <p class="m-0 text-center text-white">Copyright &copy; ruversity.com 2020</p> -->
-      <div class="m-0 text-center text-black"><i>Copyright &copy; ruversity.com 2021</i></div>
+      <div class="m-0 text-center text-black">
+        <i>Copyright &copy; ruversity.com 2021</i>
+      </div>
   </div>
   </div>
 </nav>
