--- a/project/static/style.css
+++ b/project/static/style.css
@@ -104,7 +104,7 @@
 }
 
 
-.player_1 {
+/* .player {
   max-width: 80vw;
   min-width: 800px;
   border: 5px solid black;
@@ -112,7 +112,7 @@
   background: black;
   position: relative;
   cursor: pointer;
-}
+} */
 
 video_1 {
   border-radius: 5px;
@@ -406,6 +406,28 @@ select > option {
   box-sizing: border-box;
   padding: 0.5em;
 } */
+
+.my {
+  max-width: 80vw;
+  min-width: 800px;
+  border: 5px solid black;
+  border-radius: 10px;
+  background: blue;
+  /* position: relative; */
+  cursor: pointer;
+}
+
+
+ #video {
+  max-width: 80vw;
+  min-width: 800px;
+  border: 5px solid black;
+  border-radius: 10px;
+  /* background: black; */ */
+  /* position: relative; */
+  /* cursor: pointer; */
+
+}
 
 #scroll_col {
   /* float: left; */
