--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html>
 
@@ -7,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <title>Video</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
@@ -46,15 +47,20 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class='modal-title'>Change your email address:</h5>
+                <h5 class='modal-title'>Send us a message:</h5>
                 <button class='close' data-bs-dismiss='modal'>&times;</button>
             </div>
             <div class="modal-body">
                 <form action="{% url 'email' %}" method="POST">
                     {% csrf_token %}
                     <div class="form-group">
-                        <label for="email">Enter your new email address:</label>
-                        <input class='form-control' type="text" id="email" name="email" maxlength='50' required>
+                        <label for="title">Enter short description on the subject:</label>
+                        <input class='form-control' type="title" id="title" name="title" maxlength='50' required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="message">Enter your new message:</label>
+                        <input class='form-control' type="text" id="message" name="message" maxlength='50' required>
                     </div>
             </div>
             <div class="modal-footer">
